--- a/StoreFront.UI.MVC/Views/Products/Index.cshtml
+++ b/StoreFront.UI.MVC/Views/Products/Index.cshtml
@@ -13,9 +13,9 @@
         <!-- Shop Sidebar Start -->
         <div class="col-lg-2 col-md-12">
             <!-- Price Start -->
-            <div class="border-bottom mb-4 pb-4">
+ @*           <div class="border-bottom mb-4 pb-4">
                 <h5 class="font-weight-semi-bold mb-4">Price</h5>
-                <form>
+                <form asp-action="Index" method="Get">
                     <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
                         <input type="checkbox" class="custom-control-input" checked id="price-all">
                         <label class="custom-control-label" for="price-all">All Price</label>
@@ -41,7 +41,7 @@
                         <label class="custom-control-label" for="price-5">$1000 - $2000</label>
                     </div>
                 </form>
-            </div>
+            </div>*@
             <!-- Price End -->
             <!-- Manufacturer Start -->
                 <h5 class="font-weight-semi-bold mb-4">Manufacturer</h5>
