--- a/StoreFront.UI.MVC/Views/Products/TableView.cshtml
+++ b/StoreFront.UI.MVC/Views/Products/TableView.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<StoreFront.DATA.EF.Models.Product>
 
 @{
-    ViewData["Title"] = "Shop";
+    ViewData["Title"] = "Shop Table View";
     ViewData["Title2"] = "Mountain Bike Parts";
 }
 
