--- a/StoreFront.UI.MVC/Views/Shared/_Layout.cshtml
+++ b/StoreFront.UI.MVC/Views/Shared/_Layout.cshtml
@@ -93,17 +93,17 @@
                 @Html.Raw(navBarStr)
 
                 <div class="navbar-nav w-100 overflow-hidden " style="height: 410px">    
-                    <a asp-action="Index" asp-controller="Products" asp-route-id="1"  class="nav-item nav-link bg-body">Handlebars</a>
-                    <a asp-action="Index" asp-controller="Products" asp-route-id="2"  class="nav-item nav-link bg-danger">Wheels</a>
-                    <a asp-action="Index" asp-controller="Products" asp-route-id="3"  class="nav-item nav-link bg-dark">Tires</a>
-                    <a asp-action="Index" asp-controller="Products" asp-route-id="4"  class="nav-item nav-link bg-gradient ">Brakes</a>
-                    <a asp-action="Index" asp-controller="Products" asp-route-id="5"  class="nav-item nav-link bg-info">Suspension</a>
-                    <a asp-action="Index" asp-controller="Products" asp-route-id="6"  class="nav-item nav-link bg-light">Pedals</a>
-                    <a asp-action="Index" asp-controller="Products" asp-route-id="7"  class="nav-item nav-link bg-primary">Saddles</a>
+                    <a asp-action="Index" asp-controller="Products" asp-route-id="1"  class="nav-item nav-link bg-secondary">Handlebars</a>
+                    <a asp-action="Index" asp-controller="Products" asp-route-id="2"  class="nav-item nav-link bg-secondary">Wheels</a>
+                    <a asp-action="Index" asp-controller="Products" asp-route-id="3"  class="nav-item nav-link bg-secondary">Tires</a>
+                    <a asp-action="Index" asp-controller="Products" asp-route-id="4"  class="nav-item nav-link bg-secondary ">Brakes</a>
+                    <a asp-action="Index" asp-controller="Products" asp-route-id="5"  class="nav-item nav-link bg-secondary">Suspension</a>
+                    <a asp-action="Index" asp-controller="Products" asp-route-id="6"  class="nav-item nav-link bg-secondary">Pedals</a>
+                    <a asp-action="Index" asp-controller="Products" asp-route-id="7"  class="nav-item nav-link bg-secondary">Saddles</a>
                     <a asp-action="Index" asp-controller="Products" asp-route-id="8"  class="nav-item nav-link bg-secondary">Drivetrain</a>
-                    <a asp-action="Index" asp-controller="Products" asp-route-id="9"  class="nav-item nav-link bg-success">Seatpost</a>
-                    <a asp-action="Index" asp-controller="Products" asp-route-id="10"  class="nav-item nav-link bg-warning">Maintenance</a>                  
-                                   
+                    <a asp-action="Index" asp-controller="Products" asp-route-id="10"  class="nav-item nav-link bg-secondary">Seatpost</a>
+                    <a asp-action="Index" asp-controller="Products" asp-route-id="9" class="nav-item nav-link bg-secondary">Maintenance</a>
+
                 </div>
                 </nav>
             </div>
