--- a/StoreFront.UI.MVC/Views/ShoppingCart/Index.cshtml
+++ b/StoreFront.UI.MVC/Views/ShoppingCart/Index.cshtml
@@ -139,7 +139,7 @@
                     {
                         <button disabled="disabled" class="btn w-25 btn-success my-3 ml-5 py-3">Submit Order</button>
                         <p>
-                            To place this order you must be logged in. Log In<a asp-area="Identity" asp-page="/Account/Login"> Here</a>
+                            To place this order you must be logged in. Log In<a asp-area="Identity" asp-page="/Account/Login" returnurl= 1> Here</a>
                         </p>
                     }
 
